# ice-lang-rust

./: Cargo.toml  Makefile  README.md  package-lock.json
docs/: code-guideline.md  inspirations.md
docs/ideas/: ADT.md  README.md  arrays.md  control_flow.md  custom_operators.md  functions.md  higher_kinded_types.md  polymorphism.md  sample_code.md
src/: ast.rs  check.rs  compiler.rs  error.rs  evaluator.rs  lexer.rs  main.rs  parser.rs  token.rs  tokenizer.rs  tui.rs
src/lexer/: cursor.rs  error.rs  mod.rs  span.rs  test.rs  tests.rs  token.rs
src/parser/: ast.rs  ast_print.rs  cursor.rs  error.rs  expr.rs  item.rs  mod.rs  stmt.rs  ty.rs
tests/: test.ice
