[package]
name = "ice-lang-rust"
version = "0.1.0"
authors = ["Artur <ArturMarschals@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_tree = { git = "https://github.com/martypapa/debug-tree", branch = "master" }
unicode-xid = "0.2.0"
#llvm-sys = "100"


